# sap-abap-agent

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  SECURITY.md  SKILL_AUDIT.md  SKILL_TEMPLATE.md  _commit_msg.txt  index.head.tmp  index.html  index.tail.tmp  pyproject.toml  translations.tmp
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.reuse/: dep5
agents/: abap-reviewer.md  sap-ariba-consultant-cloud.md  sap-basis-consultant-cloud.md  sap-btp-admin-consultant-cloud.md  sap-bw-consultant-cloud.md  sap-ca-consultant-cloud.md  sap-cap-consultant-cloud.md  sap-co-consultant-cloud.md  sap-cpi-consultant-cloud.md  sap-daily-learner.md  sap-docs-researcher.md  sap-ehs-consultant-cloud.md  sap-ewm-consultant-cloud.md  sap-fi-consultant-cloud.md  sap-fiori-consultant-cloud.md  sap-gts-consultant-cloud.md  sap-hcm-consultant-cloud.md  sap-ibp-consultant-cloud.md  sap-mm-consultant-cloud.md  sap-pm-consultant-cloud.md  sap-pp-consultant-cloud.md  sap-ps-consultant-cloud.md  sap-qm-consultant-cloud.md  sap-sd-consultant-cloud.md  sap-successfactors-consultant-cloud.md  sap-tm-consultant-cloud.md  sap-tr-consultant-cloud.md  sap-wm-consultant-cloud.md
commands/: mcp-setup.md  sap-connect.md  sync-skills.md
docs/: onboarding-guide.md  sap-mcp-recommendations.md
hooks/: cron_deliver.py  error_reporter.py  hooks.json  post_tool_select_star.py  session_start_skill.py  verify_nudge.py  zy_namespace_guard.py
reference/mcp-server/: pyproject.toml
reference/mcp-server/sap_abap_agent_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reference/mcp-server/sap_btp_agent/: __init__.py  bridge_server.py  doctor.py  license.py  server.py
reference/mcp-server/sap_btp_agent/cli/: __init__.py  prompt.py
reference/mcp-server/sap_btp_agent/config/: paths.py  profile.py  secrets.py  store.py
reference/mcp-server/sap_btp_agent/gui/: README.md  __init__.py  app.py  runner.py  tray.py
reference/mcp-server/sap_btp_agent/sap/: __init__.py  auth.py  client.py
reference/mcp-server/sap_btp_agent/tools/: __init__.py  dictionary.py  registry.py
reference/mcp-server/tests/: __init__.py  conftest.py  test_auto1.py  test_auto2.py  test_auto3.py  test_auto4.py  test_auto5.py  test_auto_real.py  test_auto_real2.py  test_gui_btn.py  test_int2.py  test_int3.py  test_integration.py
scripts/: dedup_search.py  deploy_enhance_index.py  fix_flexsearch.py  fix_header_duplicates.py  update_mcp_tools.py
tests/: README.md  test_bootstrap_memory.py  test_check_released_api.py  test_lesson_card_add.py  test_mcp_common.py  test_skill_curator.py  test_validate_inspired_by_links.py  (+2 more)
(+218 files in other folders)
