[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-abap-agent-mcp"
version = "1.5.4"
description = "MCP server tu dong ket noi SAP BTP (multi-profile) - rewrite Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "StormShynn" }]
keywords = ["sap", "abap", "mcp", "btp", "s4hana"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "cryptography>=42.0",
]

[project.optional-dependencies]
win-dpapi = ["pywin32>=306"]
mac-keychain = ["keyring>=24"]
playwright = ["playwright>=1.40"]
dev = ["pytest>=8"]

[project.scripts]
sap-btp-agent = "sap_btp_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sap_btp_agent*"]
exclude = ["tests*"]
